--- a/v86.css
+++ b/v86.css
@@ -54,7 +54,7 @@
     touch-action: none;
 }
 body {
-    background-color: #111;
+    background-color: #085eff;
     color: #fff;
     line-height: 1.5;
     padding: 10px;
